# streamplex

./: CMakeLists.txt  README.md
include/: streamplex.hpp
include/streamplex/: plex.hpp  socket.hpp
include/streamplex/detail/: async_result.hpp  namespaces.hpp  plex_loop.hpp
tests/: tests.cpp
